--- a/GitHubToGo/GitHubToGo/Base.lproj/Main.storyboard
+++ b/GitHubToGo/GitHubToGo/Base.lproj/Main.storyboard
@@ -55,6 +55,9 @@
                                                 <constraint firstItem="NN3-NC-GJr" firstAttribute="top" secondItem="0v6-gI-gQ1" secondAttribute="topMargin" constant="3" id="l2S-Pg-tbG"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="3bb-lf-cay" kind="show" id="ukr-TR-m04"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zyy-0C-UvL">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -77,9 +80,6 @@
                                                 <constraint firstItem="Tc2-Et-BKJ" firstAttribute="top" secondItem="ouP-WK-E7h" secondAttribute="topMargin" constant="3" id="J63-bE-0n1"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="3bb-lf-cay" kind="presentation" id="rxC-cc-Z05"/>
-                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="hnI-OR-m4W">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -117,10 +117,10 @@
             </objects>
             <point key="canvasLocation" x="1174" y="84"/>
         </scene>
-        <!--View Controller-->
+        <!--Repository View Controller-->
         <scene sceneID="Vhn-9Z-BFB">
             <objects>
-                <viewController id="3bb-lf-cay" sceneMemberID="viewController">
+                <viewController id="3bb-lf-cay" customClass="RepositoryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8Cf-tJ-oMd"/>
                         <viewControllerLayoutGuide type="bottom" id="4Ul-9a-yMG"/>
@@ -128,6 +128,21 @@
                     <view key="view" contentMode="scaleToFill" id="lNW-dr-tay">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1f0-De-cy7">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="XtX-ef-MuA">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XtX-ef-MuA" id="nNt-UT-q4M">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="0.46178608339999999" green="1" blue="0.34584859600000001" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
