Added a little bit of progress on Day 3 assignments

--- a/GitHubToGo/GitHubToGo/Base.lproj/Main.storyboard
+++ b/GitHubToGo/GitHubToGo/Base.lproj/Main.storyboard
@@ -144,13 +144,18 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TR0-bO-NNT" id="Xk0-ac-B3T">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aRt-fd-eKM">
-                                                    <rect key="frame" x="234" y="6" width="133" height="35"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aRt-fd-eKM">
+                                                    <rect key="frame" x="283" y="6" width="35.5" height="35"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="aRt-fd-eKM" secondAttribute="bottom" constant="5.5" id="8xa-Y9-gMd"/>
+                                                <constraint firstItem="aRt-fd-eKM" firstAttribute="top" secondItem="Xk0-ac-B3T" secondAttribute="top" constant="6" id="FW4-nG-tz2"/>
+                                                <constraint firstAttribute="centerX" secondItem="aRt-fd-eKM" secondAttribute="centerX" id="YJz-GD-wgt"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="repoLabel" destination="aRt-fd-eKM" id="pLI-Xj-KrO"/>
@@ -164,10 +169,10 @@
                             </tableView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="4Ul-9a-yMG" firstAttribute="top" secondItem="STr-74-y7y" secondAttribute="bottom" id="7GW-C8-puv"/>
-                            <constraint firstAttribute="trailing" secondItem="STr-74-y7y" secondAttribute="trailing" id="KUv-ab-2xF"/>
-                            <constraint firstItem="STr-74-y7y" firstAttribute="top" secondItem="8Cf-tJ-oMd" secondAttribute="bottom" id="QTM-To-3tn"/>
-                            <constraint firstItem="STr-74-y7y" firstAttribute="leading" secondItem="lNW-dr-tay" secondAttribute="leading" id="gqZ-vK-rky"/>
+                            <constraint firstItem="STr-74-y7y" firstAttribute="top" secondItem="8Cf-tJ-oMd" secondAttribute="bottom" id="Pp2-rA-hRd"/>
+                            <constraint firstAttribute="trailing" secondItem="STr-74-y7y" secondAttribute="trailing" id="eGl-wL-twt"/>
+                            <constraint firstItem="STr-74-y7y" firstAttribute="leading" secondItem="lNW-dr-tay" secondAttribute="leading" id="gfZ-DP-OgZ"/>
+                            <constraint firstItem="4Ul-9a-yMG" firstAttribute="top" secondItem="STr-74-y7y" secondAttribute="bottom" id="w3E-vI-YQN"/>
                         </constraints>
                     </view>
                     <connections>
@@ -239,6 +244,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="No0-CW-9fe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1228" y="415"/>
+        </scene>
+        <!--User View Controller-->
+        <scene sceneID="Zfl-KW-Es7">
+            <objects>
+                <viewController id="ynb-XI-DbG" customClass="UserViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ujg-cB-2gy"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z6E-NU-aio"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lBY-qD-afi">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qFF-Zu-P9a">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HgT-YI-FUz">
+                                    <size key="itemSize" width="72" height="74"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vuI-tK-rAz">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="72" height="74"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="qFF-Zu-P9a" id="axX-xe-881"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9fc-4K-eSQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1163" y="875"/>
         </scene>
     </scenes>
 </document>
